--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Go Kanban! - Revolutionise your workflow</title>
+		<title>Go Kanban! - Revolutionize your workflow</title>
 
 		<meta name="description" content="Learning Kanban way">
 		<meta name="author" content="Aftab Alam">
